Adjust background-wrapper z-index to work with fixed notification

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -42,7 +42,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
   overflow: hidden;
 }
